using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CacheString : MonoBehaviour
{
    public static string TAG_MOVE = "IsMoving";
    public static string TAG_CLOSE = "IsClose";
    public static string TAG_WAIT = "Wait";
    public static string TAG_PICKUP = "PickUp";
    public static string TAG_INTERACT = "interact";
    public static string TAG_DEAD = "dead";
}
